--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/project/Lp.css">
+    <link rel="stylesheet" href="/Lp.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
 <body>
     <header>
-        <img  class="imgHeader" src="/project/images/desktop/image-header.jpg" 
-            srcset="/project/images/desktop/image-header.jpg 1440w,/images/mobile/image-header.jpg 500w,/images/mobile/image-header.jpg 375w" alt="">
+        <img  class="imgHeader" src="/images/desktop/image-header.jpg" 
+            srcset="/images/desktop/image-header.jpg 1440w,/images/mobile/image-header.jpg 500w,/images/mobile/image-header.jpg 375w" alt="">
         <section id="menuBar">
             <h1>Sunnyside</h1>
             <nav id="menuoptions">
